--- a/docroot/sites/all/themes/opensource/sass/layouts/_responsive-pages.scss
+++ b/docroot/sites/all/themes/opensource/sass/layouts/_responsive-pages.scss
@@ -5,17 +5,19 @@
 
    .view-contributor-spotlight .badge-visual
   {
-     div
+    padding-bottom : 5px;
+     div.user-pic
     {
-      display: inline-block;
       float: left;
-      max-width: 103px;
-      padding-top : 2px;
+      max-width: 30%;
     }
     div.user-badge
     {
       float: right;
+      max-width:61%;
+      padding-bottom :10px !important;
     }
+
     img
     {
       width: 50% !important
@@ -30,15 +32,18 @@
       &.first
       {
         width: 25% !important;
+        background-size: 62px !important;
       }
 
       &:nth-child(2)
       {
         width: 41% !important;
+        background-size: 105px !important;
       }
       &.last
       {
         top: 3px;
+        background-size: 85px !important;
       }
     }
   }
@@ -72,6 +77,12 @@
     {
       padding-bottom:0 !important;  
     }
+
+   .view.view-display-id-panel_pane_articles .views-row .views-field-title 
+    {
+      text-align:center;
+    }
+
 // Landing Page /////////////////////////////////////
 .section-open-organization.page-taxonomy 
   {
@@ -96,12 +107,12 @@
         {
           .panel-pane .show-read-more
           {
+            text-align:center;
             .read-more
             {
-            float: none;
-            position: absolute;
-            padding-top: 10%;
+            float: left;
             }
+
           }
           img
           {
@@ -116,7 +127,6 @@
               }
               .views-field-title
               {
-                text-align: center;
                 width: 100%;
                 padding: 0 0 0.3em 0;
                                 
@@ -127,9 +137,11 @@
               }
               .views-field-body
               {
-                  padding: 9.3em 0;
-                  max-height: 48px;
-                  min-height: 40px;
+                  padding: 9.3em 0 0 0;
+              }
+              .views-row-last .views-field-created
+              {
+                padding-bottom:50px;
               }
 
           }
@@ -155,7 +167,6 @@
         .panel-panel.burr-flipped-sidebar
         {
           width: 100% !important;
-
           .panel-panel-inner 
           {
             .pane-3
@@ -182,6 +193,7 @@
           text-align:left;
           }
         }
+
         }
       }
 //////////////////////////////////////////////
@@ -204,11 +216,8 @@
   .panel-pane
 
   {
-    p
-    {
-      text-align : justify;
-    }
-    h2
+   
+    h2,h3
     {
       text-align: center;
     }
